--- a/app/src/main/res/layout/auto_toolbar.xml
+++ b/app/src/main/res/layout/auto_toolbar.xml
@@ -25,5 +25,7 @@
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:layout_marginRight="16dp"
+        android:clickable="true"
+        android:id="@+id/search_icon"
         android:src="@android:drawable/ic_menu_search"/>
 </RelativeLayout>
